force-app/main/default/objects/Fund__c/fields/First_Close_Amount_mn__c.field-meta.xml
<CustomField>
    <fullName>First_Close_Amount_mn__c</fullName>
    <label>First Close Amount (mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>